--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     
     <title>Crazy Time 24</title>
   </head>
-  <body>
+  <body class="darken">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
